@@ -3,10 +3,16 @@ If you're anyone like me, you've probably seen and used [Aikar's flags](https://
 
 They're completely unusable for servers with lower RAM amounts, ballooning your actively used RAM way higher than needed. Server hosts charge based on your RAM amount per month, so save some money and use the JVM flags below:
 
-#### Java 8 (CMS GC)
+#### Minecraft Servers (Java 8)
 
 ```
 java -Xms128M -Xmx{{SERVER_MEMORY}}M -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+CMSParallelInitialMarkEnabled -XX:+CMSClassUnloadingEnabled -XX:MaxGCPauseMillis=50 -XX:+DisableExplicitGC -XX:+OptimizeStringConcat -XX:+AlwaysPreTouch -XX:+UseFastAccessorMethods -XX:+UseCompressedOops -XX:+AggressiveOpts -Dterminal.jline=false -Dterminal.ansi=true -jar {{SERVER_JARFILE}}
+```
+
+#### Technic Launcher (Java 8)
+
+```
+-XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+CMSParallelInitialMarkEnabled -XX:+CMSClassUnloadingEnabled -XX:MaxGCPauseMillis=50 -XX:+DisableExplicitGC -XX:+OptimizeStringConcat -XX:+AlwaysPreTouch -XX:+UseFastAccessorMethods -XX:+UseCompressedOops -XX:+AggressiveOpts
 ```
 
 Compared to Java's default flags, these keep memory extremely low with minimal performance impacts. You should expect solid performance your memory, at it's worst and fullest, to sit right around 70% if all ends well with garbage collection. If you're on higher Java versions than Java 8, I'd advise against using the flags above.
